HONEYCOMB-448: JAVA 11 support
- updated dependencies
- compilation error fixes

Change-Id: Iad9d353d06c113a0da892ff11a442e4b41edae0d
Signed-off-by: Michal Cmarada <mcmarada@cisco.com>