@@ -87,8 +87,8 @@
                 <!-- Generate shell script -->
                 <!-- Extract modules started by distribution -->
                 <plugin>
-                    <groupId>org.codehaus.gmaven</groupId>
-                    <artifactId>groovy-maven-plugin</artifactId>
+                    <groupId>org.codehaus.gmavenplus</groupId>
+                    <artifactId>gmavenplus-plugin</artifactId>
                     <executions>
                         <execution>
                             <id>start-scripts-generation</id>
@@ -97,9 +97,14 @@
                                 <goal>execute</goal>
                             </goals>
                             <configuration>
-                                <source>
-                                    io.fd.honeycomb.common.scripts.StartupScriptGenerator.generate(project, properties, log)
-                                </source>
+                                <scripts>
+                                    <script>
+                                        <![CDATA[
+                                            import io.fd.honeycomb.common.scripts.StartupScriptGenerator
+                                            StartupScriptGenerator.generate(project, properties, log)
+                                        ]]>
+                                    </script>
+                                </scripts>
                             </configuration>
                         </execution>
                         <execution>
@@ -111,9 +116,14 @@
                                 <goal>execute</goal>
                             </goals>
                             <configuration>
-                                <source>
-                                    io.fd.honeycomb.common.scripts.ModulesListGenerator.generate(project, properties, log)
-                                </source>
+                                <scripts>
+                                    <script>
+                                        <![CDATA[
+                                            import io.fd.honeycomb.common.scripts.ModulesListGenerator
+                                            ModulesListGenerator.generate(project, log)
+                                        ]]>
+                                    </script>
+                                </scripts>
                             </configuration>
                         </execution>
                         <execution>
@@ -123,9 +133,14 @@
                                 <goal>execute</goal>
                             </goals>
                             <configuration>
-                                <source>
-                                    io.fd.honeycomb.common.scripts.ModuleYangIndexGenerator.pairDistributionModulesWithYangModules(project, log)
-                                </source>
+                                <scripts>
+                                    <script>
+                                        <![CDATA[
+                                            import io.fd.honeycomb.common.scripts.ModuleYangIndexGenerator
+                                            ModuleYangIndexGenerator.pairDistributionModulesWithYangModules(project, log)
+                                        ]]>
+                                    </script>
+                                </scripts>
                             </configuration>
                         </execution>
                     </executions>
@@ -167,17 +182,18 @@
 
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.0</version>
                     <configuration>
                         <!--http://stackoverflow.com/questions/18107375/getting-skipping-jacoco-execution-due-to-missing-execution-data-file-upon-exec-->
-                        <argLine>${argLine} -Djava.security.egd=file:${random.seed.file}</argLine>
+                        <argLine>${argLine} -Djava.security.egd=file:${random.seed.file} --illegal-access=permit</argLine>
                     </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>groovy-maven-plugin</artifactId>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
