@@ -33,12 +33,12 @@
     <!-- Static version, we don't want it to be deployed anyway-->
     <version>1.0.0</version>
     <properties>
-        <commons-csv.version>1.4</commons-csv.version>
+        <commons-csv.version>1.6</commons-csv.version>
         <honeycomb.version>1.19.04-SNAPSHOT</honeycomb.version>
-        <maven.groovy.version>2.0</maven.groovy.version>
-        <groovy.version>2.4.7</groovy.version>
-        <groovy.eclipse.compiler.version>2.9.2-01</groovy.eclipse.compiler.version>
-        <groovy.eclipse.batch.version>2.4.3-01</groovy.eclipse.batch.version>
+        <maven.groovy.version>1.6.2</maven.groovy.version>
+        <groovy.version>2.5.5</groovy.version>
+        <groovy.eclipse.compiler.version>3.3.0-01</groovy.eclipse.compiler.version>
+        <groovy.eclipse.batch.version>2.5.6-02</groovy.eclipse.batch.version>
     </properties>
     <!-- to be runnable from command line -->
     <packaging>jar</packaging>
@@ -72,6 +72,7 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
+            <type>pom</type>
         </dependency>
 
         <dependency>
@@ -102,9 +103,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.22.0</version>
                 <configuration>
                     <skipTests>true</skipTests>
+                    <!-- allow reflection for documentation -->
+                    <argLine>--illegal-access=permit</argLine>
                 </configuration>
             </plugin>
 
@@ -128,8 +131,8 @@
 
             <!-- generate scripts for benchmarks -->
             <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>groovy-maven-plugin</artifactId>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
                 <executions>
                     <!-- script for on-rest memory benchmark -->
                     <execution>
@@ -140,9 +143,14 @@
                         </goals>
                         <!-- 0 data samples == empty config file, therefore same as honeycomb on rest -->
                         <configuration>
-                            <source>
-                            io.fd.honeycomb.benchmark.script.MemoryBenchmarkStartupScriptGenerator.generateWithDataScript(project, log, "memory-benchmark-on-rest-out", 0)
-                            </source>
+                            <scripts>
+                                <script>
+                                    <![CDATA[
+                                        import io.fd.honeycomb.benchmark.script.MemoryBenchmarkStartupScriptGenerator
+                                        MemoryBenchmarkStartupScriptGenerator.generateWithDataScript(project, log, "memory-benchmark-on-rest-out", 0)
+                                    ]]>
+                                </script>
+                            </scripts>
                         </configuration>
                     </execution>
                     <!-- script for memory benchmark with 1000 nodes in config data-->
@@ -153,9 +161,14 @@
                             <goal>execute</goal>
                         </goals>
                         <configuration>
-                            <source>
-                            io.fd.honeycomb.benchmark.script.MemoryBenchmarkStartupScriptGenerator.generateWithDataScript(project, log, "memory-benchmark-with-data-out", 1000)
-                            </source>
+                            <scripts>
+                                <script>
+                                    <![CDATA[
+                                        import io.fd.honeycomb.benchmark.script.MemoryBenchmarkStartupScriptGenerator
+                                        MemoryBenchmarkStartupScriptGenerator.generateWithDataScript(project, log, "memory-benchmark-with-data-out", 1000)
+                                    ]]>
+                                </script>
+                            </scripts>
                         </configuration>
                     </execution>
                     <!-- script for memory benchmark with 10000 nodes in config data-->
@@ -166,9 +179,14 @@
                             <goal>execute</goal>
                         </goals>
                         <configuration>
-                            <source>
-                            io.fd.honeycomb.benchmark.script.MemoryBenchmarkStartupScriptGenerator.generateWithDataScript(project, log, "memory-benchmark-with-data-out", 10000)
-                            </source>
+                            <scripts>
+                                <script>
+                                    <![CDATA[
+                                        import io.fd.honeycomb.benchmark.script.MemoryBenchmarkStartupScriptGenerator
+                                        MemoryBenchmarkStartupScriptGenerator.generateWithDataScript(project, log, "memory-benchmark-with-data-out", 10000)
+                                    ]]>
+                                </script>
+                            </scripts>
                         </configuration>
                     </execution>
                 </executions>
